# rpq-matrix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bfs-dfs.xlsx  bfs.out  dfs.out  dfs2.out  ~$bfs-dfs.xlsx
CMakeModules/: CheckSSE.cmake
data/: paths.tsv
data/wikidata/: paths-split-73.tsv
data/yago2s/: paths.tsv
exp/: 20230510.ring.res  20230511.timeout60s.part1.txt  20230511.timeout60s.part2.txt  20230511.timeout60s.txt  Ring-RPQ.numbers  bfs-ordering.res  finales.numbers  mandatories  matrix  pq-results-waves.cpp  queries-no-negated.tsv  resultados-20230512.xlsx  results.txt  ring-bfs-24  ring-inter-24  ring-split-24  separate-rpq-results  separate-rpq-results.cpp  separate-rpq-results.py  split.res  split1.csv  split2.csv  wikidata.opt.2.out  wikidata.opt.2.txt  wikidata.opt.out  wikidata.opt.txt  wikidata.res.txt  wikidata.split.opt.2.out  wikidata.split.opt.out  wikidata.txt  yago2s.csv  yago2s.opt.2.csv  yago2s.opt.2.out  yago2s.opt.csv  yago2s.opt.out  yago2s.out  ~$resultados-20230512.xlsx
exp/clasificators/: create-clasificators.py  queries-classified.tsv  queries-selected.tsv
exp/res/: table.py  untitled.py
exp/res/all/blazegraph/: blazegraph-1  blazegraph-10  blazegraph-11  blazegraph-12  blazegraph-13  blazegraph-14  (+18 more)
exp/res/matrix/: 20230513.timeout60s.part1.txt  20230513.timeout60s.part2.txt  matrix  matrix-1  matrix-11  matrix-12  matrix-13  matrix-14  matrix-15  matrix-16  matrix-18  matrix-19  matrix-2  matrix-22  matrix-3  matrix-4  matrix-5  matrix-6  matrix-7  matrix-8  matrix-9  matrix-all  matrix-all_c_to_v  matrix-all_v_to_v  proba.py
exp/res/matrix-old/: matrix-1  matrix-10  matrix-17  matrix-20  matrix-21  matrix-22  matrix-23  matrix-3  matrix-4  matrix-6  matrix-7  matrix-9  matrix-all_c_to_v  separate-results
exp/res/ring/: baseline.out  ring  ring-1  ring-10  ring-11  ring-12  ring-13  ring-14  ring-15  ring-16  ring-17  ring-19  ring-2  ring-20  ring-21  ring-22  ring-23  ring-3  ring-4  ring-5  ring-6  ring-7  ring-8  ring-9  ring-all  ring-all_c_to_v  ring-all_v_to_v
exp/res/ring-bfs/: ring-bfs  ring-bfs-1  ring-bfs-10  ring-bfs-11  ring-bfs-12  ring-bfs-13  ring-bfs-14  ring-bfs-15  ring-bfs-16  ring-bfs-17  ring-bfs-18  ring-bfs-19  ring-bfs-2  ring-bfs-20  ring-bfs-21  ring-bfs-22  ring-bfs-23  ring-bfs-24  ring-bfs-3  ring-bfs-4  ring-bfs-5  ring-bfs-6  ring-bfs-7  ring-bfs-8  ring-bfs-9  ring-bfs-all  ring-bfs-all_c_to_v  ring-bfs-all_v_to_v  ring-inter-1  ring-inter-10  ring-inter-11  ring-inter-12  ring-inter-13  ring-inter-14  ring-inter-15  ring-inter-16  ring-inter-17  ring-inter-18  ring-inter-19  ring-inter-2  (+12 more)
exp/res/ring-inter/: ring-inter  ring-inter-1  ring-inter-10  ring-inter-11  ring-inter-12  ring-inter-13  ring-inter-14  ring-inter-15  ring-inter-16  ring-inter-17  ring-inter-18  ring-inter-19  ring-inter-2  ring-inter-20  ring-inter-21  ring-inter-22  ring-inter-23  ring-inter-24  ring-inter-3  ring-inter-4  ring-inter-5  ring-inter-6  ring-inter-7  ring-inter-8  ring-inter-9  ring-inter-all  ring-inter-all_c_to_v  ring-inter-all_v_to_v  wikidata.out
exp/res/ring-pos/: data  ring-pos  ring-pos-1  ring-pos-10  ring-pos-11  ring-pos-12  ring-pos-13  ring-pos-14  ring-pos-15  ring-pos-16  ring-pos-17  ring-pos-18  ring-pos-19  ring-pos-2  ring-pos-20  ring-pos-21  ring-pos-22  ring-pos-23  ring-pos-3  ring-pos-4  ring-pos-5  ring-pos-6  ring-pos-7  ring-pos-8  ring-pos-9  ring-pos-all  ring-pos-all_c_to_v  ring-pos-all_v_to_v
exp/res/ring-split/: ring-split  ring-split-1  ring-split-10  ring-split-11  ring-split-12  ring-split-13  ring-split-14  ring-split-15  ring-split-16  ring-split-17  ring-split-18  ring-split-19  ring-split-2  ring-split-20  ring-split-21  ring-split-22  ring-split-23  ring-split-24  ring-split-3  ring-split-4  ring-split-5  ring-split-6  ring-split-7  ring-split-8  ring-split-9  ring-split-all  ring-split-all_c_to_v  ring-split-all_v_to_v  wikidata.opt.2.out
include/: bm_baseline.hpp  bm_baseline_32.hpp  bm_k2_tree.hpp  bm_k2_tree_p.hpp  file.hpp  rpq_solver.hpp  utils.hpp
lib/baseline_gn/: CMakeLists.txt
lib/baseline_gn/include/baseline/: basics.h  hash.h  heap.h  matrix.h  matrix32.h  utilstime.h
lib/baseline_gn/src/baseline/: basics.c  hash.c  heap.c  matrix.c  matrix32.c  utilstime.c
lib/matrix_gn/: CMakeLists.txt
lib/matrix_gn/include/k2-tree/: basics.h  bitvector.h  matrix.h  utilstime.h
lib/matrix_gn/src/k2-tree/: basics.c  bitvector.c  k2tree.c  matrix.c  utilstime.c
lib/matrix_p_gn/: CMakeLists.txt
lib/matrix_p_gn/include/k2-tree-p/: bitvector.h  k2tree.h  matrix.h  utilstime.h
lib/matrix_p_gn/src/k2-tree-p/: basics.c  bitvector.c  k2tree.c  matrix.c  utilstime.c
matrix_gn/: CMakeLists.txt
matrix_gn/include/: basics.h  bitvector.h  k2tree.h  matrix.h  utilstime.h
matrix_gn/src/: basics.c  bitvector.c  k2tree.c  matrix.c  matrix.old.c  utilstime.c
nfa/: CMakeLists.txt
nfa/include/: RpqAutomata.hpp  RpqTree.hpp  basics.hpp  options.hpp  parser.hpp  regular.hpp  selectivity.hpp
nfa/src/: RpqAutomata.cpp  RpqTree.cpp  bitmasks.cpp  options.cpp  parser.cpp  regular.cpp
queries/: paths.tsv  query-types.tsv
src/: baseline_32_build.cpp  baseline_32_query.cpp  baseline_build.cpp  baseline_query.cpp  build-index-basic.cpp  build-index-split.cpp  build-index.cpp  bwt-C-nose.hpp  bwt_interval.hpp  create_pairs.cpp  exp-mult-k2tree-D.cpp  exp-sum-k2tree-D.cpp  intersection_or.cpp  k2_tree_build.cpp  k2_tree_p_query.cpp  k2_tree_query.cpp  main.cpp  mandatory.cpp  matrix-test.cpp  parse_query.cpp  pre-query.cpp  prepare-queries-yago2s.cpp  prepare-yago2s.cpp  query-index-baseline.cpp  query-index-basic.cpp  query-index-split-v3-all.cpp  query-index-split-v4-all.cpp  query-index-split.cpp  query-index-split_v3.cpp  query-index-split_v3_1.cpp  query-index-split_v4.cpp  query-index.cpp  query.cpp  query_config.hpp  ring_rpq_basic.hpp  ring_rpq_split.hpp  rpq-densities.cpp  rpq-proba.cpp  rpq_solver.hpp  selectivity.hpp  (+22 more)
src/synthetic/: mult_matrices.cpp
src/utilities/: queries-prepare.cpp  sort-pos-bfs.cpp  sort-pos.cpp  yago2s-prepare.cpp
(+110 files in other folders)
